# colonization

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/client/: CMakeLists.txt  agent.hpp  command.hpp  console.cpp  console.hpp  logic.hpp  main.cpp  null_ai.hpp  props.hpp  renderer-pre.cpp  renderer.cpp  renderer.hpp  runner.cpp  runner.hpp  simple_ai.hpp
src/front/: base.hpp  front.cpp  pixfont.hpp
src/server/: CMakeLists.txt  base.hpp  env.hpp
